# hdreffects

./: .gitignore  CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile  README.md  a.out  app.cpp  app.h  basic.frag  basic.vert  camera.cpp  camera.h  cmake_install.cmake  graphics.h  main.cpp  makefile  material.cpp  material.h  mesh.cpp  mesh.h  renderer.cpp  renderer.h  rgbshift.frag  run.sh  tags  utils.h
cubicdistort/: main.cpp
lib/: rgbe.c
report/: report.tex
src/: .app.cpp.swp  app.cpp  main.cpp  shaderlibrary.cpp  shaderlibrary.h
src/core/: app.cpp  app.cpp~  app.h  camera.cpp  camera.h  cubemap.cpp  cubemap.h  geometries.cpp  geometries.h  geometry.cpp  geometry.h  graphics.h  mesh.cpp  mesh.cpp~  mesh.h  texture.cpp  texture.h
src/hdr/: .hdrimage.cpp.swp  .hdrimage.h.swp  hdrcubemap.cpp  hdrcubemap.h  hdrimage.cpp  hdrimage.h  hdrrawimage.cpp  hdrrawimage.h  hdrtexturecube.cpp  hdrtexturecube.h
src/helpers/: .rgbe.c.swp  debug.cpp  debug.h  glfwfunc.cpp  glfwfunc.h  globals.cpp  globals.h  graphics.h~  objparser.cpp  objparser.h  rgbe.c  shaderlibrary.cpp  shaderlibrary.h  utils.h
src/materials/: material.cpp  material.h  materialcubemap.cpp  materialcubemap.h
src/objects/: camera.cpp  camera.h
src/render/: framebuffer.cpp  framebuffer.h  material.cpp  material.h  materialcubemap.cpp  renderer.cpp  renderer.cpp~  renderer.h  shader.cpp  shader.h
